@@ -4,7 +4,12 @@ import static org.assertj.core.api.Assertions.assertThat;
 import org.testng.TestNG;
 import org.testng.annotations.Test;
 
+import org.testng.xml.XmlSuite;
 import test.SimpleBaseTest;
+import test.guice.issue2343.Person;
+import test.guice.issue2343.SampleA;
+import test.guice.issue2343.SampleB;
+import test.guice.issue2343.modules.ParentModule;
 
 public class GuiceTest extends SimpleBaseTest {
 
@@ -32,5 +37,14 @@ public class GuiceTest extends SimpleBaseTest {
     testng.setInjectorFactory((stage, modules) -> new FakeInjector());
     testng.run();
     assertThat(FakeInjector.getInstance()).isNotNull();
+  }
+
+  @Test(description = "GITHUB-2343")
+  public void ensureInjectorsAreReUsed() {
+    XmlSuite suite = createXmlSuite("sample_suite", "sample_test", SampleA.class, SampleB.class);
+    suite.setParentModule(ParentModule.class.getCanonicalName());
+    TestNG testng = create(suite);
+    testng.run();
+    assertThat(Person.counter).isEqualTo(1);
   }
 }
